--- a/package.json
+++ b/package.json
@@ -24,11 +24,12 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
-    "chart.js": "^4.4.0",
+    "chart.js": "3.9.1",
     "chartjs-node-canvas": "^4.1.6",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "reflect-metadata": "^0.1.13",
+    "rimraf": "^5.0.5",
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
