--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "chartjs-node-canvas": "^4.1.6",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "pdfkit": "^0.13.0",
+    "pdfmake": "^0.2.7",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^5.0.5",
     "rxjs": "^7.8.1"
