--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "chartjs-node-canvas": "^4.1.6",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "nodemailer": "^6.9.7",
     "pdfkit": "^0.13.0",
     "pdfmake": "^0.2.7",
     "reflect-metadata": "^0.1.13",
