--- a/appspec.yml
+++ b/appspec.yml
@@ -1,13 +1,16 @@
 version: 0.0
 os: linux
 files:
-  - source: .
+  - source: /
     destination: /home/ec2-user/rundsted-report-server
+    overwrite: true
 hooks:
   BeforeInstall:
-    - location: scripts/before_install
+    - location: scripts/before_install.sh
       timeout: 300
       runas: root
+  AfterInstall:
+    - location: scripts/after_install.sh
   ApplicationStart:
     - location: scripts/start_server
       timeout: 300
