--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
+    "aws-sdk": "^2.1502.0",
     "chart.js": "3.9.1",
     "chartjs-node-canvas": "^4.1.6",
     "class-transformer": "^0.5.1",
