--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@aws-sdk/client-sesv2": "^3.460.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
+    "adm-zip": "^0.5.10",
     "aws-sdk": "^2.1502.0",
     "chart.js": "3.9.1",
     "chartjs-node-canvas": "^4.1.6",
