--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "aws-sdk": "^2.1502.0",
     "chart.js": "3.9.1",
     "chartjs-node-canvas": "^4.1.6",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "dotenv": "^16.3.1",
